Implement installation command and related traits for Softigital Core

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "SoftigitalDev\\Core\\CoreServiceProvider"
+                "SoftigitalDev\\Core\\Providers\\CoreServiceProvider"
             ]
         }
     }
