--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Required to mirror full history
+          fetch-depth: 0
       
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url:
-            https://youssefehab@bitbucket.org/softigital/laravel-tool-kit.git
-          # Bitbucket now requires this specific static username for API tokens
-          username: x-bitbucket-api-token-auth
-          password: ${{ secrets.BITBUCKET_API_TOKEN }}
+            https://x-token-auth:${{ secrets.BITBUCKET_API_TOKEN }}@bitbucket.org/softigital/laravel-tool-kit.git
