--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,13 @@ jobs:
   to-bitbucket:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
-      - uses: pixta-dev/repository-mirroring-action@v1
+
+      - name: Mirror to Bitbucket
+        uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url:
             https://x-token-auth:${{ secrets.BITBUCKET_API_TOKEN }}@bitbucket.org/softigital/laravel-tool-kit.git
